Changed background color

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -83,7 +83,7 @@ input, select, textarea {
 	}
 
 	body {
-		background: #fad7a0;
+		background:ivory;
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
