--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2597,7 +2597,7 @@ input, select, textarea {
 		background-position: top left,							top left;
 		background-repeat: repeat,								no-repeat;
 		background-size: auto,								150%;
-		color: rgba(255, 255, 255, 0.5);
+		color: white;
 		height: 100%;
 		left: 0;
 		padding: 8em 4em;
@@ -2632,7 +2632,7 @@ input, select, textarea {
 		}
 
 		#header h1 {
-			color: rgba(255, 255, 255, 0.5);
+			color: white;
 			font-size: 2 em;
 			line-height: 1.75em;
 			margin: 0;
@@ -2640,7 +2640,7 @@ input, select, textarea {
 
 		#header .image.avatar {
 			margin: 0 0 1em 0;
-			width: 9.25em;
+			width: 11.25em;
 		}
 
 /* Footer */
@@ -2650,11 +2650,11 @@ input, select, textarea {
 	}
 
 		#footer .icons a {
-			color: rgba(255, 255, 255, 0.4);
+			color: white;
 		}
 
 	#footer .copyright {
-		color: rgba(255, 255, 255, 0.4);
+		color: white;
 		font-size: 0.8em;
 		list-style: none;
 		margin: 1em 0 0 0;
@@ -2676,7 +2676,7 @@ input, select, textarea {
 			}
 
 			#footer .copyright li a {
-				color: inherit;
+				color: white;
 			}
 
 /* Main */
